<resources>
    <string name="app_name">Android Shop App</string>
    <string name="intro_first_line">The Easy shopping solution</string>
    <string name="intro_second_line">Shop is in your hand now!!!</string>
    <string name="btn_login">User Login here</string>
    <string name="btn_user_signup">New User? Register here</string>
    <string name="enter_email">Enter username</string>
    <string name="enter_password">Enter password</string>
    <string name="user_login">USER LOGIN</string>
    <string name="registration_message">new user registration</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="contact_number">Contact number</string>
    <string name="btn_register">Register</string>
    <string name="popular_products">Popular Products</string>
    <string name="browse_category">Browse Category</string>

</resources>
