<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/screenbg"
    tools:context=".RegisterActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10sp"
        android:orientation="vertical"
        >
        <ImageView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:src="@drawable/shop_logo"
            android:layout_gravity="center"
            android:layout_marginTop="40sp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registration_message"
            android:textSize="22sp"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:textColor="@color/colorDarkRed"
            android:layout_marginTop="40sp"
            android:layout_marginBottom="40sp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal"
            >

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:id="@+id/userFirstNameWrapper"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/userFirstName"
                android:inputType="text"
                android:hint="@string/first_name"
                android:textColor="@color/colorRed"
                android:textSize="18sp"
                android:textColorHint="@color/colorRed"
                />

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="5dp"
            android:id="@+id/lastNameWrapper">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/userLastName"
                android:inputType="text"
                android:hint="@string/last_name"
                android:textSize="18sp"
                android:textColor="@color/colorRed"
                android:textColorHint="@color/colorRed"/>

        </android.support.design.widget.TextInputLayout>
        </LinearLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:id="@+id/userEmailWrapper">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/userEmail"
                    android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890"
                    android:inputType="textFilter"
                    android:hint="@string/email_address"
                    android:textSize="18sp"
                    android:textColor="@color/colorRed"
                    android:textColorHint="@color/colorRed"/>

            </android.support.design.widget.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal">
            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/PasswordWrapper">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/userPassword"
                    android:inputType="textPassword"
                    android:hint="@string/password"
                    android:textSize="18sp"
                    android:textColorHint="@color/colorRed"
                    />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/confPasswordWrapper"
                >
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/userConfPassword"
                    android:inputType="textPassword"
                    android:textSize="18sp"
                    android:textColorHint="@color/colorRed"
                    android:hint="@string/confirm_password"
                    />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/contactNoWrapper"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/userContactNumber"
                android:inputType="phone"
                android:textSize="18sp"
                android:textColorHint="@color/colorRed"
                android:hint="@string/contact_number"/>
        </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_register"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:background="@drawable/btnsignupbg"/>
    </LinearLayout>

</LinearLayout>